tests/baselines/reference/parserConstructorAmbiguity2.errors.txt
==== tests/cases/compiler/parserConstructorAmbiguity2.ts (1 errors) ====
    new Date<A
             ~
!!! parserConstructorAmbiguity2.ts(1,10): error TS2095: Cannot find name 'A'.